@@ -272,8 +272,7 @@ static void set_single_note_tuning(int, int, int, int);
 static char *event_name(int type)
 {
 #define EVENT_NAME(X) case X: return #X
-    switch(type)
-    {
+	switch (type) {
 	EVENT_NAME(ME_NONE);
 	EVENT_NAME(ME_NOTEOFF);
 	EVENT_NAME(ME_NOTEON);
@@ -324,12 +323,17 @@ static char *event_name(int type)
 #if 0
 	EVENT_NAME(ME_VOLUME_ONOFF);		/* Not supported */
 #endif
+	EVENT_NAME(ME_SCALE_TUNING);
+	EVENT_NAME(ME_BULK_TUNING_DUMP);
+	EVENT_NAME(ME_SINGLE_NOTE_TUNING);
+	EVENT_NAME(ME_TEMPER_KEYSIG);
+	EVENT_NAME(ME_TEMPER_TYPE);
+	EVENT_NAME(ME_MASTER_TEMPER_TYPE);
 	EVENT_NAME(ME_RANDOM_PAN);
 	EVENT_NAME(ME_SET_PATCH);
 	EVENT_NAME(ME_DRUMPART);
 	EVENT_NAME(ME_KEYSHIFT);
 	EVENT_NAME(ME_PATCH_OFFS);
-
 	EVENT_NAME(ME_TEMPO);
 	EVENT_NAME(ME_CHORUS_TEXT);
 	EVENT_NAME(ME_LYRIC);
@@ -343,20 +347,14 @@ static char *event_name(int type)
 	EVENT_NAME(ME_NOTE_STEP);
 	EVENT_NAME(ME_TIMESIG);
 	EVENT_NAME(ME_KEYSIG);
-	EVENT_NAME(ME_SCALE_TUNING);
-	EVENT_NAME(ME_BULK_TUNING_DUMP);
-	EVENT_NAME(ME_SINGLE_NOTE_TUNING);
-	EVENT_NAME(ME_TEMPER_KEYSIG);
-	EVENT_NAME(ME_TEMPER_TYPE);
-	EVENT_NAME(ME_MASTER_TEMPER_TYPE);
 	EVENT_NAME(ME_WRD);
 	EVENT_NAME(ME_SHERRY);
 	EVENT_NAME(ME_BARMARKER);
 	EVENT_NAME(ME_STEP);
 	EVENT_NAME(ME_LAST);
 	EVENT_NAME(ME_EOT);
-    }
-    return "Unknown";
+	}
+	return "Unknown";
 #undef EVENT_NAME
 }
 
